--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "scripts": {
       "build:sass": "sass  --no-source-map src/sass:public/css",
       "copy:html": "copyfiles -u 1 ./src/*.html public",
-      "copy:assets": "copyfiles -u 1 .public/src/assets/**/* public",
+      "copy:assets": "copyfiles -u 1 /src/assets:public/**/*",
       "copy": "npm-run-all --parallel copy:*",
-      "watch:assets": "onchange \"public/src/assets/**/*\" -- npm run copy:assets",
+      "watch:assets": "onchange \"src/assets:public/**/*\" -- npm run copy:assets",
       "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
       "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
       "watch": "npm-run-all --parallel watch:*",
