--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "scripts": {
       "build:sass": "sass  --no-source-map src/sass:public/css",
       "copy:html": "copyfiles -u 1 ./src/*.html public",
-      "copy:assets": "copyfiles -u 1 /src/assets:public/**/*",
+      "copy:assets": "copyfiles -u 1 /src/assets/**/*:public",
       "copy": "npm-run-all --parallel copy:*",
-      "watch:assets": "onchange \"src/assets:public/**/*\" -- npm run copy:assets",
+      "watch:assets": "onchange \"src/assets/**/*:public\" -- npm run copy:assets",
       "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
       "watch:sass": "sass  --no-source-map --watch src/sass:public/css",
       "watch": "npm-run-all --parallel watch:*",
       "serve": "browser-sync start --server public --files public",
       "start": "npm-run-all copy --parallel watch serve",
-      "build": "npm-run-all copy:html build:*",
+      "build": "npm-run-all copy:html copy:assets build:*",
       "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
     },
     "dependencies": {
