--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "author": "5t3ph",
     "scripts": {
       "build:sass": "sass  --no-source-map src/sass:public/css",
+      "copy:script": "copyfiles -u 1 ./src/*.js public",
       "copy:html": "copyfiles -u 1 ./src/*.html public",
       "copy:assets": "copyfiles -u 1 src/assets/**/* public",
       "copy": "npm-run-all --parallel copy:*",
@@ -15,7 +16,7 @@
       "watch": "npm-run-all --parallel watch:*",
       "serve": "browser-sync start --server public --files public",
       "start": "npm-run-all copy --parallel watch serve",
-      "build": "npm-run-all copy:html copy:assets build:*",
+      "build": "npm-run-all copy:html copy:assets copy:script build:*",
       "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
     },
     "dependencies": {
